# mcps

./: .env.example  Dockerfile  MCP_README.md  NEW_README.md  README.md  SETUP.md  docker-compose.yml  main.py  requirements-test.txt  requirements.txt  start_server.sh  test_servers.sh
1/: README.md  client.py  direct_test.sh  install-uv.sh  install.sh  install_in_claude.sh  install_in_claude_ollama.sh  install_in_ollama.sh  run.sh  run_inspector.sh  run_ollama.sh  server.py  test.sh  test_mcp.sh  test_ollama.sh  test_ollama2.sh  test_ollama_api.py  test_ollama_cli.sh  test_ollama_direct.py  test_ollama_stream.py
2/: README.md  ask.sh  ask2.sh  client.py  client2.py  examples2.sh  fix.py  mcp_ollama.py  minimal_mcp_client.py  minimal_mcp_ollama.py  server.py  server.sh  server2.sh  server3.py  start.sh
3/: OLLAMA.md  README.md  TODO.txt  ask.sh  config.py  env_loader.py  lalama.py  model.sh  ollama.sh  pyproject.toml  server.py  setup.bat  setup.sh
3/server/: .env.example  .gitignore  INSTALLATION.md  LICENSE  README.md  pyproject.toml  src.md
3/server/ollama_server/: __init__.py  api.py  cli.py  models.py  server.py  utils.py
3/server/ollama_server/web/: __init__.py
3/server/ollama_server/web/static/css/: style.css
3/server/ollama_server/web/static/js/: script.js
3/server/ollama_server/web/templates/: base.html  error.html  index.html
3/server/scripts/: install.sh  setup_models.sh
3/server/tests/: test_api.py  test_config.py  test_models.py
docs/: CHALLENGES.md
examples/: use_filesystem_server.py
mcp/: __init__.py  client.py  config.py
(+39 files in other folders)
